--- a/views/spots/index.ejs
+++ b/views/spots/index.ejs
@@ -23,6 +23,7 @@
           </div>
           <% } %>
         </div>
+        <%- include('../partials/pagination', {page, totalPages}) %>
       </div>
     </div>
   </div>
